[gd_scene load_steps=19 format=3 uid="uid://brbhxoo1l6rv6"]

[ext_resource type="Script" uid="uid://saf20cgkm6oh" path="res://scripts/furnace.gd" id="1_548mx"]
[ext_resource type="PackedScene" uid="uid://dprutpg3k0vgy" path="res://scenes/FX/furnace_smoke.tscn" id="2_f6emi"]
[ext_resource type="PackedScene" uid="uid://cpjyw4m88sh8e" path="res://scenes/FX/flame.tscn" id="3_6ncjf"]
[ext_resource type="Texture2D" uid="uid://fplrsjnjo5ua" path="res://sprites/Charcoals-Sheet.png" id="4_gtcqd"]
[ext_resource type="Script" uid="uid://6i82qnbeinjo" path="res://scripts/point_light_flicker.gd" id="6_2koyx"]
[ext_resource type="Texture2D" uid="uid://7r1twb2e13lm" path="res://sprites/SmallFurnace.png" id="7_548mx"]
[ext_resource type="PackedScene" uid="uid://dh7i1sculfnd1" path="res://scenes/Bellows.tscn" id="7_yyxjv"]
[ext_resource type="AudioStream" uid="uid://msfro63d4ror" path="res://audio/sfx/Fire, Burning, Stove, Inset Fireplace, House Chimney, From Side, Constant, Wide Opening, Nice Deep Roar With Cracks SND36889.wav" id="8_f6emi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cqhb"]
size = Vector2(28, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cqhb"]
atlas = ExtResource("4_gtcqd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61l8k"]
atlas = ExtResource("4_gtcqd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uoyi"]
atlas = ExtResource("4_gtcqd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcyua"]
atlas = ExtResource("4_gtcqd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s82ge"]
atlas = ExtResource("4_gtcqd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cqhb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cqhb")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61l8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uoyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcyua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s82ge")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0y7ne"]
size = Vector2(32, 22)

[sub_resource type="Gradient" id="Gradient_5cqhb"]
offsets = PackedFloat32Array(0, 0.733766)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s82ge"]
gradient = SubResource("Gradient_5cqhb")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Furnace" type="StaticBody2D" groups=["furnace"]]
input_pickable = true
script = ExtResource("1_548mx")
min_volume_db = -20.0
volume_fade_speed = 10.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." groups=["furnace"]]
position = Vector2(16, 9)
shape = SubResource("RectangleShape2D_5cqhb")

[node name="Charcoals2" type="AnimatedSprite2D" parent="CollisionShape2D2"]
z_index = -1
position = Vector2(7, -4)
sprite_frames = SubResource("SpriteFrames_5cqhb")
animation = &"off"

[node name="Charcoals" type="AnimatedSprite2D" parent="CollisionShape2D2"]
z_index = -1
position = Vector2(-7, -4)
sprite_frames = SubResource("SpriteFrames_5cqhb")
animation = &"off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 21)
shape = SubResource("RectangleShape2D_0y7ne")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(16, 8)
color = Color(0.761045, 0.573057, 0, 1)
range_z_max = 3
texture = SubResource("GradientTexture2D_s82ge")
script = ExtResource("6_2koyx")

[node name="FireArea" type="Area2D" parent="." groups=["furnace"]]
position = Vector2(16, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireArea" groups=["furnace"]]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_5cqhb")

[node name="BellowSystem" parent="." instance=ExtResource("7_yyxjv")]
position = Vector2(48, 18)

[node name="SmallFurnace" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("7_548mx")

[node name="FurnaceSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(16, 8)
stream = ExtResource("8_f6emi")
autoplay = true
bus = &"SFX"

[node name="Flame" parent="." instance=ExtResource("3_6ncjf")]
position = Vector2(16, 8)
scale = Vector2(0.8, 1)
amount = 150

[node name="FurnaceSmoke" parent="." instance=ExtResource("2_f6emi")]
position = Vector2(16, 8)
scale = Vector2(0.8, 1)
amount = 750
lifetime = 12.0
